[package]
name = "datpiff"
version = "0.1.2"
edition = "2021"
description = "Rust library for DatPiff"
documentation = "https://docs.rs/datpiff"
readme = "README.md"
repository = "https://github.com/tsirysndr/datpiff"
license = "MIT"

[lib]
doctest = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.17", features = ["derive"] }
colored_json = "2.1.0"
scraper = "0.13.0"
serde = "1.0.144"
serde_json = "1.0.85"
surf = "2.3.2"
tokio = { version = "1.20.1", features = ["full"] }
urlencoding = "2.1.0"
